# genai-compliance-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: _base.yaml
benchmarks/financial/: disclosure.yaml  pii.yaml
benchmarks/financial/aml/: rules.yaml
benchmarks/financial/fair_lending/: rules.yaml
benchmarks/financial/sox_audit/: rules.yaml
benchmarks/healthcare/: hipaa.yaml
benchmarks/telecom/: cpni.yaml
docs/: architecture.md  methodology.md  nist-ai-rmf-mapping.md
docs/sector_guides/: financial_services.md  telecommunications.md
examples/: custom_rules.py  financial_eval_demo.py  quickstart.py  self_evolving_demo.py
src/genai_compliance_bench/: __init__.py  types.py
src/genai_compliance_bench/evaluator/: __init__.py  batch_eval.py  realtime_eval.py
src/genai_compliance_bench/learner/: __init__.py  feedback_loop.py  risk_feature_store.py
src/genai_compliance_bench/policy_engine/: __init__.py  engine.py  explainer.py  rule_loader.py
tests/: test_batch_eval.py  test_engine.py
