[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-compliance-bench"
version = "0.2.0"
description = "Pre-deployment compliance evaluation benchmarks for generative AI."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["compliance", "evaluation", "benchmark", "genai", "llm"]
dependencies = ["pyyaml>=6.0", "pydantic>=2.0", "rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4.0", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/genai_compliance_bench"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
