[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-compliance-bench"
version = "0.3.0"
description = "Pre-deployment compliance evaluation benchmarks for generative AI in regulated industries."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "genai-compliance-bench contributors" },
]
keywords = ["compliance", "evaluation", "benchmark", "genai", "llm", "nist", "ai-rmf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.5",
    "rich>=13.7",
]

[project.optional-dependencies]
learner = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
]
all = [
    "genai-compliance-bench[learner,dev]",
]

[project.urls]
Homepage = "https://github.com/Wang-Cankun/genai-compliance-bench"
Documentation = "https://github.com/Wang-Cankun/genai-compliance-bench/tree/main/docs"
Issues = "https://github.com/Wang-Cankun/genai-compliance-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/genai_compliance_bench"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
